Pasted-2024-11-23-23-36-49-867-INFO-Found-existing-email-with-message-id-1732257149835-2024134329-pcc-0--1732405066248.txt
2024-11-23 23:36:49,867 INFO: Found existing email with message_id: <1732257149835.2024134329.pcc.0.36210.01000000@ad426se.mpse.jp>, lead_id: 585 [in /home/runner/CRM/email_receiver.py:818]
2024-11-23 23:36:49,867 INFO: Duplicate email detected from mail@ft.family.co.jp [in /home/runner/CRM/email_receiver.py:1047]
2024-11-23 23:36:50,069 INFO: 172.31.196.11 - - [23/Nov/2024 23:36:50] "GET /leads/10839/detail HTTP/1.1" 500 - [in /home/runner/CRM/.pythonlibs/lib/python3.11/site-packages/werkzeug/_internal.py:224]
Traceback (most recent call last):
  File "/home/runner/CRM/.pythonlibs/lib/python3.11/site-packages/flask/app.py", line 2552, in __call__
    return self.wsgi_app(environ, start_response)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/CRM/.pythonlibs/lib/python3.11/site-packages/flask/app.py", line 2532, in wsgi_app
    response = self.handle_exception(e)
               ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/CRM/.pythonlibs/lib/python3.11/site-packages/flask/app.py", line 2529, in wsgi_app
    response = self.full_dispatch_request()
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/CRM/.pythonlibs/lib/python3.11/site-packages/flask/app.py", line 1825, in full_dispatch_request
    rv = self.handle_user_exception(e)
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/CRM/.pythonlibs/lib/python3.11/site-packages/flask/app.py", line 1823, in full_dispatch_request
    rv = self.dispatch_request()
         ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/CRM/.pythonlibs/lib/python3.11/site-packages/flask/app.py", line 1799, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/CRM/.pythonlibs/lib/python3.11/site-packages/flask_login/utils.py", line 290, in decorated_view
    return current_app.ensure_sync(func)(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/CRM/routes/leads.py", line 318, in lead_detail
    return render_template('leads/detail.html', lead=lead)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/CRM/.pythonlibs/lib/python3.11/site-packages/flask/templating.py", line 146, in render_template
    template = app.jinja_env.get_or_select_template(template_name_or_list)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/CRM/.pythonlibs/lib/python3.11/site-packages/jinja2/environment.py", line 1084, in get_or_select_template
    return self.get_template(template_name_or_list, parent, globals)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/CRM/.pythonlibs/lib/python3.11/site-packages/jinja2/environment.py", line 1013, in get_template
    return self._load_template(name, globals)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/CRM/.pythonlibs/lib/python3.11/site-packages/jinja2/environment.py", line 972, in _load_template
    template = self.loader.load(self, name, self.make_globals(globals))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/CRM/.pythonlibs/lib/python3.11/site-packages/jinja2/loaders.py", line 138, in load
    code = environment.compile(source, name, filename)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/CRM/.pythonlibs/lib/python3.11/site-packages/jinja2/environment.py", line 768, in compile
    self.handle_exception(source=source_hint)
  File "/home/runner/CRM/.pythonlibs/lib/python3.11/site-packages/jinja2/environment.py", line 939, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "/home/runner/CRM/templates/leads/detail.html", line 163, in template
    {% endblock %}
jinja2.exceptions.TemplateSyntaxError: Encountered unknown tag 'endblock'.
2024-11-23 23:36:50,274 INFO: 172.31.196.11 - - [23/Nov/2024 23:36:50] "GET /leads/10839/detail?__debugger__=yes&cmd=resource&f=style.css HTTP/1.1" 200 - [in /home/runner/CRM/.pythonlibs/lib/python3.11/site-packages/werkzeug/_internal.py:224]
2024-11-23 23:36:50,299 INFO: 172.31.196.11 - - [23/Nov/2024 23:36:50] "GET /leads/10839/detail?__debugger__=yes&cmd=resource&f=debugger.js HTTP/1.1" 200 - [in /home/runner/CRM/.pythonlibs/lib/python3.11/site-packages/werkzeug/_internal.py:224]
2024-11-23 23:36:50,339 DEBUG: Session committed successfully. Duration: 1.42s [in /home/runner/CRM/email_receiver.py:667]
2024-11-23 23:36:50,339 DEBUG: Session closed. Total duration: 1.42s [in /home/runner/CRM/email_receiver.py:683]
2024-11-23 23:36:50,552 INFO: 172.31.196.11 - - [23/Nov/2024 23:36:50] "GET /leads/10839/detail?__debugger__=yes&cmd=resource&f=console.png HTTP/1.1" 200 - [in /home/runner/CRM/.pythonlibs/lib/python3.11/site-packages/werkzeug/_internal.py:224]
2024-11-23 23:36:50,692 DEBUG: Starting email content processing [in /home/runner/CRM/email_receiver.py:60]
2024-11-23 23:36:50,692 DEBUG: Processing multipart content of length 132, charset: utf-8 [in /home/runner/CRM/email_receiver.py:117]
2024-11-23 23:36:50,692 DEBUG: Detected utf_8 with confidence 0.99 [in /home/runner/CRM/email_receiver.py:202]
2024-11-23 23:36:50,692 DEBUG: Successfully decoded using detected encoding: utf_8 [in /home/runner/CRM/email_receiver.py:83]
2024-11-23 23:36:50,692 DEBUG: Added content part: 96 chars [in /home/runner/CRM/email_receiver.py:124]
2024-11-23 23:36:50,692 DEBUG: Final content length: 96 [in /home/runner/CRM/email_receiver.py:149]
2024-11-23 23:36:50,764 INFO: 172.31.196.11 - - [23/Nov/2024 23:36:50] "GET /leads/10839/detail?__debugger__=yes&cmd=resource&f=console.png HTTP/1.1" 304 - [in /home/runner/CRM/.pythonlibs/lib/python3.11/site-packages/werkzeug/_internal.py:224]
2024-11-23 23:36:50,817 INFO: Found existing email with message_id: <1732252788587.2024102791.bd112.0.8734.00000000@ad387se.mpse.jp>, lead_id: 981 [in /home/runner/CRM/email_receiver.py:818]
2024-11-23 23:36:50,817 INFO: Duplicate email detected from noreply@noreply.mybook.co.jp [in /home/runner/CRM/email_receiver.py:1047]